hphp/test/zend/good/ext-zlib/zlib_scheme_fopen_basic.php
<?php
$inputFileName = dirname(__FILE__)."/004.txt.gz";
$srcFile = "compress.zlib://$inputFileName";
$h = fopen($srcFile, 'r');
fpassthru($h);
fclose($h);
?>
===DONE===